# AIaudioEQmaster

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
resources/model/: genre_feature_scaler.joblib  genre_model.joblib  genre_target_scaler.joblib
resources/profiles/: Ambient_profile.json  Chillout_profile.json  Dance_profile.json  EDM_profile.json  Hiphop_profile.json  Orchestral_profile.json  Piano_profile.json  Pop_profile.json  Rock_profile.json  Speech_profile.json
resources/secured_genres/: Ambient.secgnr  Chillout.secgnr  Dance.secgnr  Hiphop.secgnr  Orchestral.secgnr  Piano.secgnr  Pop.secgnr  Rock.secgnr  Speech.secgnr
scripts/: run_mastering.ps1
src/: cli.py  lib.py  mastering.py  test_model.py
src/common/: paths.py
src/cpu/: __init__.py  audio_io.py  config.py  dynamics.py  mastering.py  pipeline.py  reference.py  spectral.py  stereo.py  transforms.py
src/cpu_test/: __init__.py  audio_io.py  benchmark.py  config.py  dynamics.py  mastering.py  pipeline.py  spectral.py  stereo.py  transforms.py
