[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AIaudioEQmaster"
version = "0.1.0"
description = "Customizable AI audio EQ/mastering baseline project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy==2.0.2",
  "scipy==1.14.1",
  "librosa==0.10.2.post1",
  "soundfile==0.12.1",
  "pyloudnorm==0.1.1",
  "numba==0.60.0",
  "statsmodels==0.14.4",
  "scikit-learn==1.5.2",
  "joblib==1.4.2",
  "cryptography==44.0.0"
]

[project.scripts]
ai-audio-eq-master = "src.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
